simpler types, native and non-native sequencing and traversal